--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.9",
+    "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.9",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,6 +20,7 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.6.1",
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
