--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.2",
