--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-image-magnify": "^2.7.4",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
@@ -25,6 +26,7 @@
     "react-spring": "^9.6.1",
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^9.1.1",
+    "swiper": "^9.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
