--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
+    "chart.js": "^4.2.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-image-magnify": "^2.7.4",
